index.css
@font-face {
  font-family: Alata;
  src: url("fonts/Alata-Regular.ttf");
}
@font-face {
  fpnt-family: JosefinSans;
  src: url("fonts/JosefinSans-VariableFont_wght.ttf");
}
.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}
.bg-dark {
  background-color: hsl(0, 0%, 0%);
}
.text-darkgray {
  color: hsl(0, 0%, 42%);
}
.nav-link {
  color: white;
  font-family: Alata;
  font-size: 0.83rem;
  font-weight: 400;
}
.nav-item {
  margin-right: 1rem;
}
.immersive-text{
  margin-left: 6rem;
  margin-top: 6rem;
  padding-right: 1rem;
}
.immersive-text h1{
  font-family: Alata;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.2;
}
.bottom-left {
  position: absolute;
  bottom: 8px;
  left: 16px;
  font-size: 2rem;
}
@media screen and (max-width: 768px) {
  .immersive-text {
    margin-left: 2rem;
    margin-top: 8rem;
    padding-right: 1rem;
  }
  .immersive-text h1 {
    font-size: 3rem;
  }
  .bottom-left {
    font-size: 1rem;
  }
}

